DuPont DevSB/src/objects/ffirule__IntegrationRuleJob__c.object
<CustomObject>
    <customHelpPage>ffirule__helpintegrationrulejob</customHelpPage>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRule__c</fullName>
        <label>ClickLink Rule</label>
        <referenceTo>ffirule__IntegrationRule__c</referenceTo>
        <relationshipLabel>ClickLink Jobs</relationshipLabel>
        <relationshipName>IntegrationRuleJobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffirule__ListViewName__c</fullName>
        <label>List View Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ListViewObject__c</fullName>
        <label>List Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ListViewSourceIDField__c</fullName>
        <label>List Object Source ID Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ScheduledApexJobCronExpression__c</fullName>
        <label>Scheduled Apex Job Cron Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ScheduledApexJobID__c</fullName>
        <label>Scheduled Apex Job ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>ClickLink Job</label>
    <listViews>
        <fullName>ffirule__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>